Fix safari bug where backface footer was still visible

--- a/draft-packages/tile/KaizenDraft/Tile/components/GenericTile.scss
+++ b/draft-packages/tile/KaizenDraft/Tile/components/GenericTile.scss
@@ -45,6 +45,10 @@ $tilePaddingTop: $kz-spacing-xl;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+
+  * {
+    backface-visibility: hidden;
+  }
 }
 
 .faceFront {
